# telegram-class-bot

./: .gitignore  README.md  ideas.txt  main.py  pyproject.toml  requirements.txt  resetdb.py  roadmap.md
klassbot/: config.py  db.py  i18n.py  klassbot.py  logging.py
klassbot/handlers/: __init__.py
klassbot/handlers/callback/: assign.py  klass.py
klassbot/handlers/command/: __init__.py  assign.py  create.py  help.py  klass.py  start.py
klassbot/handlers/commands/: start.py
klassbot/handlers/conversation/: __init__.py  klass.py
klassbot/models/: __init__.py  assign.py  assign_grade.py  conversation.py  klass.py  lesson.py  user.py
klassbot/models/assign/: __init__.py  assign.py  assign_grade.py
klassbot/models/klass/: __init__.py  klass.py
klassbot/models/persistence/: __init__.py  conversation.py
klassbot/models/user/: __init__.py  user.py  user_klass.py
klassbot/utils/: __init__.py  bot_data.py  conversation.py  db.py  enums.py  parser.py  persistence.py  presistence.py  wrappers.py
tests/: test_klassbot.py
tests/models/: base.py  user.py
