[tool.poetry]
name = "klassbot"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
